@@ -361,7 +361,7 @@ PLAYERKILL=OPTIONAL-4
 # The PLAYERDEATH describes what happens to a player when they die.
 # Multiple entries may be included, and are separated by commas.
 # The default is EXPERIENCE, but valid values include:
-# PURGE        The player is erased from the system.
+# PURGE X      The player is erased from the system after X deaths.
 # UNLEVEL X    The player loses X levels of experience.
 # LOSESKILL    The player loses a random skill
 # RETAIN       The player retains their equipment
