@@ -215,7 +215,9 @@ public class MasterDyeing extends MasterPaintingSkill
 					if(workColors.startsWith(cStr))
 					{
 						final Color256 C=getAllColors256NamesMap().get(cStr);
-						if(C!=null)
+						if((C!=null)
+						&&(!C.getCmChars().equals("^K"))
+						&&(!C.getCmChars().equals("^#000")))
 						{
 							if(C.getExpertiseNum()<=super.getXLEVELLevel(mob))
 							{
@@ -269,7 +271,8 @@ public class MasterDyeing extends MasterPaintingSkill
 				}
 			}
 		}
-		if((finalRecipe == null) && (!writing.equalsIgnoreCase("remove")))
+		if((finalRecipe == null)
+		&& (!writing.equalsIgnoreCase("remove")))
 		{
 			for(final List<String> list : recipes)
 			{
