@@ -256,7 +256,15 @@ public class Necromancer extends Cleric
 				for(final String cmd : cmds)
 				{
 					if(cmd.toUpperCase().startsWith("PUR"))
-						return false;
+					{
+						int maxLives = 1;
+						final int x = cmd.indexOf(' ');
+						if(x>0)
+							maxLives = CMath.s_int(cmd.substring(x+1).trim());
+						if((myChar.playerStats()==null)
+						||(myChar.playerStats().deathCounter(0)>=maxLives-1))
+							return false;
+					}
 				}
 			}
 		}
